golang/kubernetes/k8s-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-server
  labels:
    app: go-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: go-server
        tier: service
    spec:
      containers:
      - name: go-server
        image: "go-server:1.0.1"
        ports:
        - containerPort: 5000
