golang/kubernetes/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-server
  labels:
    app: go-server
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: go-server
